[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/espada_personagem.png" type="Texture" id=1]
[ext_resource path="res://scripts/loots/loot_espada_01.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="loot_espada_01" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -2.0
margin_top = -29.0
margin_right = 37.0
margin_bottom = -15.0
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_loot_espada_01_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_loot_espada_01_body_exited"]
